--- a/style.css
+++ b/style.css
@@ -72,11 +72,11 @@ header {
     transform: rotateY(180deg);
 }
 
-/* .card:hover  */.back-face {
+.card:hover  .back-face {
     transform: rotateY(0deg);
 }
 
-/* .card:hover  */.front-face {
+.card:hover  .front-face {
     transform: rotateY(-180deg);
 }
 
